add userNum info

--- a/server/public/style/main.scss
+++ b/server/public/style/main.scss
@@ -59,12 +59,12 @@ h1.title {
   }
 }
 
-.scores-container {
+.scores-container, .infos-container {
   float: right;
   text-align: right;
 }
 
-.score-container, .best-container {
+.score-container, .best-container, .userNum-container {
   $height: 25px;
 
   position: relative;
@@ -112,6 +112,10 @@ h1.title {
 
 .best-container:after {
   content: "Best"
+}
+
+.userNum-container:after {
+  content: "Online"
 }
 
 p {
@@ -500,7 +504,7 @@ hr {
     margin: 0 auto;
   }
 
-  .score-container, .best-container {
+  .score-container, .best-container , .userNum-container{
     margin-top: 0;
     padding: 15px 10px;
     min-width: 40px;
