--- a/public/style/main.css
+++ b/public/style/main.css
@@ -516,7 +516,8 @@ hr {
   line-height: 42px;
   display: block;
   text-align: center;
-  float: right; }
+  float: right;
+  visibility: hidden; }
 
 .game-explanation {
   margin-top: 50px; }
