--- a/public/style/main.css
+++ b/public/style/main.css
@@ -94,7 +94,8 @@ h1.title {
 
 .best-container:after {
   content: "Best"; }
-
+#userNum:after {
+    content: "Online"; }
 p {
   margin-top: 0;
   margin-bottom: 10px;
